[package]
name = "comand_line_todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# handle comand line interface  better 
structopt = "0.3"

# base crate for serialization and deserialization 
serde = {version = "1.0", features = ["derive"]}

# especific for seria and deseria on json 
serde_json = "1.0"

# to format Date type into json throught serde 
chrono = {version = "0.4" , features = ["serde"]}














# this is equivalent another sintax 
# [dependencies]
# serde_json = "1.0"    # Add serde_json.
# structopt = "0.3"

# [dependencies.chrono]
# features = ["serde"]  # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
# version = "0.4"

# [dependencies.serde]  # Add serde in its own section.
# features = ["derive"] # We'll need the derive feature.
# version = "1.0"